feat(tp1-tp2): exo 5 tp-1

--- a/tp-2/exo-3/index.html
+++ b/tp-2/exo-3/index.html
@@ -12,14 +12,8 @@
     <img
       onclick="increaseWidth(event)"
       src="./assets/CessnaClouds.jpg"
-      alt=""
-      srcset=""
+      alt="c1"
     />
-    <img
-      onclick="increaseWidth(event)"
-      src="./assets/img-6.jpg"
-      alt=""
-      srcset=""
-    />
+    <img onclick="increaseWidth(event)" src="./assets/img-6.jpg" alt="c2" />
   </body>
 </html>
