feat(tp2): exo 2 tp-2

--- a/tp-2/exo-1/index.html
+++ b/tp-2/exo-1/index.html
@@ -9,11 +9,13 @@
     <title>Exo 1</title>
   </head>
   <body>
-    <img
-      class="img"
-      onclick="toggleRotate(event)"
-      src="./assets/cessna152.jpeg"
-      alt="c1"
-    />
+    <div class="main">
+      <img
+        class="img"
+        onclick="toggleRotate(event)"
+        src="./assets/cessna152.jpeg"
+        alt="c1"
+      />
+    </div>
   </body>
 </html>
