feat(tp2): exo 3 tp-2

--- a/tp-2/exo-3/index.html
+++ b/tp-2/exo-3/index.html
@@ -9,11 +9,13 @@
     <title>Exo 3</title>
   </head>
   <body>
-    <img
-      onclick="increaseWidth(event)"
-      src="./assets/CessnaClouds.jpg"
-      alt="c1"
-    />
-    <img onclick="increaseWidth(event)" src="./assets/img-6.jpg" alt="c2" />
+    <div class="main">
+      <img
+        onclick="increaseWidth(event)"
+        src="./assets/CessnaClouds.jpg"
+        alt="c1"
+      />
+      <img onclick="increaseWidth(event)" src="./assets/img-6.jpg" alt="c2" />
+    </div>
   </body>
 </html>
