feat(tp2): exo 4 tp-2

--- a/tp-2/exo-4/index.html
+++ b/tp-2/exo-4/index.html
@@ -8,6 +8,6 @@
     <title>Exo 4</title>
   </head>
   <body>
-    <div class="square"></div>
+    <div onclick="test(event)" class="square"></div>
   </body>
 </html>
