--- a/tp-2/exo-2/index.html
+++ b/tp-2/exo-2/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./index.js" type="text/javascript" defer></script>
+    <style>
+      ul {
+        list-style: none;
+      }
+      li {
+        transition: all 0.5s ease-in-out;
+        color: rgb(25, 113, 116);
+        padding: 3px;
+      }
+    </style>
     <title>Exo 2</title>
   </head>
   <body>
